# distributed-matrix-multiplication

./: .gitignore
GUIClient/: pom.xml
GUIClient/src/main/java/: module-info.java
GUIClient/src/main/java/put/poznan/guiclient/: CommunicationThread.java  ConnectionHandler.java  ConnectionThread.java  DataHandler.java  GUIAdapter.java  GUIClient.java  GUIClientController.java  GUIConverter.java  HelperThread.java  ReceiverThread.java  SenderThread.java  StatusThread.java
GUIClient/src/main/resources/put/poznan/guiclient/: hello-view.fxml  main-view.fxml
GUIClient/src/test/java/: ConnectionHandlerTest.java  DataHandlerTest.java
Server/: CMakeLists.txt  README.md
Server/include/: ServerRunner.hpp
Server/include/conn/: Connection.hpp  Type.hpp
Server/include/err/: connection_exception.hpp  request_exception.hpp  server_exception.hpp
Server/include/proc/: Processor.hpp
Server/include/rqst/: Key.hpp  RequestIdentifier.hpp  RequestParser.hpp  ResponseConstructor.hpp  Value.hpp
Server/include/utils/: Connection.hpp  RequestParser.hpp  ResponseConstructor.hpp  ServerRunner.hpp  TCPSocket.hpp  Type.hpp  Value.hpp  ValueIdentifier.hpp  server_exception.hpp
Server/src/: ServerRunner.cpp  main.cpp
Server/src/err/: connection_exception.cpp  request_exception.cpp  server_exception.cpp
Server/src/proc/: Processor.cpp
Server/src/rqst/: RequestIdentifier.cpp  RequestParser.cpp  ResponseConstructor.cpp
Server/src/utils/: RequestParser.cpp  ResponseConstructor.cpp  ServerRunner.cpp  ValueIdentifier.cpp  server_exception.cpp
Unit/: CMakeLists.txt
Unit/include/: UnitRunner.hpp
Unit/include/err/: unit_exception.hpp
Unit/include/rqst/: RequestConstructor.hpp  ResponseParser.hpp
Unit/src/: UnitRunner.cpp  main.cpp
Unit/src/err/: unit_exception.cpp
Unit/src/rqst/: RequestConstructor.cpp  ResponseParser.cpp
